GPUV-21 Modelo y conexión con el repositorio creadaas. Se creó un viewModel para los feligreses (de momento solo puede recuperar los registros de Firebase).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="lblRolListarFragment">Rol: </string>
     <string name="lblTelListarFragment">Teléfono: </string>
     <string name="lblLiderListarFragment">¿Es líder?: </string>
+    <string name="lblFiltrar">Filtrar por:</string>
+    <string name="lblOrdenar">Ordenar por:</string>
+    <string name="lblFiltroAlfabeticoAscen">A-Z ascendente.</string>
+    <string name="lblFiltroAlfabeticoDescen">A-Z descendente.</string>
+    <string name="lblFiltroEdadAscen">Edad ascendente.</string>
+    <string name="lblFiltroEdadDescen">Edad descendente.</string>
+    <string name="lblEdadFiltro">Edad.</string>
+    <string name="lblMin">A partir de:</string>
+    <string name="lblMax">Hasta:</string>
+    <string name="lblBtnAplicarFiltro">Aplicar filtros</string>
 </resources>
