añadiendo campo de Estado de atencion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,7 @@
 
     <string name="tituloEditarUsuario">EDITAR USUARIO</string>
     <string name="editar_usuario">Editar Usuario</string>
+    <string name="subtituloEstadoDeAtencion">Estado de atención</string>>
+    <string name="estado_de_atencion">Cambiar estado de atención</string>>
+    <string name="selecc_atencion">Cambie el estado de atención</string>>
 </resources>
