haciendo las listas de los adapters desde string.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,16 @@
     <string name="subtituloEstadoDeAtencion">Estado de atención</string>>
     <string name="estado_de_atencion">Cambiar estado de atención</string>>
     <string name="selecc_atencion">Cambie el estado de atención</string>>
+
+    <string-array name="listaTipoDocumento">
+        <item>Cédula</item>
+        <item>Tajerta de Identidad</item>
+        <item>Pasaporte</item>
+    </string-array>
+
+    <string-array name="listaEstadoAtencion">
+        <item>Por Llamar</item>
+        <item>En Proceso</item>
+        <item>Llamado</item>
+    </string-array>
 </resources>
