--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,6 @@
     <string name="bottomBarText2">Reportes</string>
     <string name="bottomBarText3">Pendientes</string>
     <string name="txtFloatBtnAnadirFeligres">Añadir un feligrés.</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tooltipBarraBusqueda">Buscar una persona.</string>
     <string name="lblFiltro">Filtrar</string>
     <string name="lblResultados">Resultados</string>
@@ -49,7 +48,7 @@
     <string name="lblFiltroAlfabeticoDescen">A-Z descendente.</string>
     <string name="lblFiltroEdadAscen">Edad ascendente.</string>
     <string name="lblFiltroEdadDescen">Edad descendente.</string>
-    <string name="lblEdadFiltro">Filtrar por edad.</string>
+    <string name="lblEdadFiltro">Edad.</string>
     <string name="lblMin">A partir de:</string>
     <string name="lblMax">Hasta:</string>
     <string name="lblBtnAplicarFiltro">Aplicar</string>
@@ -74,4 +73,11 @@
         <item>En Proceso</item>
         <item>Llamado</item>
     </string-array>
+    <string name="lblFiltroEstadoCivil">Estado civil.</string>
+    <string name="lblFiltroSexo">Sexo.</string>
+    <string name="lblFiltroMasculino">Masculino.</string>
+    <string name="lblFiltroFemenino">Femenino.</string>
+    <string name="lblFiltroCasado">Casado.</string>
+    <string name="lblFiltroSoltero">Soltero.</string>
+    <string name="lblFiltroSheet">Filtrar por:</string>
 </resources>
