--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GestRenacer</string>
+    <string name="buscar_hint">Buscar a una persona aquí</string>
     <string name="tituloAñadirUsuario">CREAR NUEVO USUARIO</string>
     <string name="label_nombre">Nombre(s):</string>
     <string name="inserte_su_nombre">Inserte su nombre</string>
