"Alineacion de elementos, y agregando al archivo string.xml"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,9 @@
     <string name="lblFiltroDivorciado">Divorciado(a).</string>
     <string name="lblFiltroViudo">Viudo(a).</string>
     <string name="lblFiltroSheet">Filtrar por:</string>
+    <string name="checkbox_select_all">Seleccionar Todos</string>
+    <string name="outlined_icon_btn_desc">Cancelar</string>
+
+
+
 </resources>
