--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,7 +120,11 @@
     <string name="lblFiltroSheet">Filtrar por:</string>
     <string name="checkbox_select_all">Seleccionar Todos</string>
     <string name="outlined_icon_btn_desc">Cancelar</string>
-
-
-
+    <string name="txtModalTelRep">El número de celular ingresado ya está registrado. Reintenta nuevamente con otro.</string>
+    <string name="txtModalTelExcep">No se ha podido guardar el registro. Reintenta mas tarde.</string>
+    <string name="titModalError">Error.</string>
+    <string name="txtBtnAceptar">Aceptar</string>
+    <string name="txtModalEliminar">¿Estás seguro de que deseas eliminar a los usuarios seleccionados?</string>
+    <string name="txtErrorBorrarAdmin">Debes conservar al menos un administrador en la lista.</string>
+    <string name="txtErrorBorrarTodos">No puedes borrar tu propio registro.</string>
 </resources>
