Check if user's role is Admi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,14 @@
     <string name="tituloMensajeria">Mensajeria</string>
     <string name="ya_hay_un_grupo_con_ese_nombre_elige_otro">Ya hay un grupo con ese nombre. Elige otro</string>
     <string name="por_favor_asigna_un_nombre_al_grupo">Por favor, asigna un nombre al grupo</string>
+    <string name="escribe_el_nombre_del_grupo">Escribe el nombre del grupo</string>
+    <string name="crear_plantilla_y_enviar">Crear plantilla y enviar</string>
+    <string name="plantillas_de_mensajes">Plantillas de mensajes</string>
+    <string name="nombre_de_la_plantilla">Nombre de la plantilla</string>
+    <string name="deseas_crear_una_plantilla_de_este_mensaje">¿Deseas crear una plantilla de este mensaje?</string>
+    <string name="grupos_predeterminados">Grupos predeterminados</string>
+    <string name="escribe_un_mensaje">Escribe un mensaje</string>
+    <string name="enviar">Enviar</string>
 
 
 </resources>
