GPUV-17 Se mejoró la visualización de edades en el modal para detallar grupos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,5 @@
     <string name="grupos_predeterminados">Grupos predeterminados</string>
     <string name="escribe_un_mensaje">Escribe un mensaje</string>
     <string name="enviar">Enviar</string>
+    <string name="txtErrPlantilla">Ya hay una plantilla con ese nombre.</string>
 </resources>
