--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,4 +156,6 @@
     <string name="escribe_un_mensaje">Escribe un mensaje</string>
     <string name="enviar">Enviar</string>
     <string name="txtErrPlantilla">Ya hay una plantilla con ese nombre.</string>
+    <string name="txtNoPerSms">No hay personas que coincidan con los filtros.</string>
+    <string name="txtGrupoErrNoEncontrado">No existe un grupo con ese nombre.</string>
 </resources>
