GPUV-16 Error en el ModalBottomSheet arreglado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,4 +162,5 @@
     <string name="lblEnviadoHist">Enviado a: </string>
     <string name="lblFechaHist">Fecha envío:</string>
     <string name="lblHistSms">Historial de mensajes</string>
+    <string name="lblBtnHistSms">Historial</string>
 </resources>
