--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,12 +139,12 @@
     <string name="lblBtnEnviarSms">Enviar mensaje</string>
     <string name="lblBtnEnvGuardSms">Enviar y guardar mensaje</string>
     <string name="txtCrearPlantilla">¿Crear una plantilla a partir de este mensaje?</string>
-    <string name="txtErrorSms">No se podido enviar los SMS, reintenta mas tarde.</string>
+    <string name="txtErrorSms">No se podido enviar los SMS, reintenta más tarde.</string>
     <string name="txtTodaEdad">Todas las edades.</string>
     <string name="txtEnvPersonSel">El mensaje se enviará a </string>
     <string name="lblMensajeria">Mensajería</string>
     <string name="lbl_Usar_Huella">Usar Huella</string>>
-    <string name="tituloMensajeria">Mensajeria</string>
+    <string name="tituloMensajeria">Mensajería</string>
     <string name="ya_hay_un_grupo_con_ese_nombre_elige_otro">Ya hay un grupo con ese nombre. Elige otro</string>
     <string name="por_favor_asigna_un_nombre_al_grupo">Por favor, asigna un nombre al grupo</string>
     <string name="escribe_el_nombre_del_grupo">Escribe el nombre del grupo</string>
@@ -158,4 +158,5 @@
     <string name="txtErrPlantilla">Ya hay una plantilla con ese nombre.</string>
     <string name="txtNoPerSms">No hay personas que coincidan con los filtros.</string>
     <string name="txtGrupoErrNoEncontrado">No existe un grupo con ese nombre.</string>
+    <string name="txtSmsEnviados">Los SMS fueron enviados correctamente.</string>
 </resources>
