--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,4 +164,5 @@
     <string name="lblFechaHist">Fecha envío:</string>
     <string name="lblHistSms">Historial de mensajes</string>
     <string name="lblBtnHistSms">Ver historial</string>
+    <string name="lblGrupoHist">Grupo:</string>
 </resources>
