--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,7 +162,7 @@
     <string name="txtErrPlantilla">Ya hay una plantilla con ese nombre.</string>
     <string name="txtNoPerSms">No hay personas que coincidan con los filtros.</string>
     <string name="txtGrupoErrNoEncontrado">No existe un grupo con ese nombre.</string>
-    <string name="txtSmsEnviados">Los SMS fueron enviados correctamente.</string>
+    <string name="txtSmsEnviados">Los SMS fueron planificados satisfactoriamente.</string>
     <string name="no_especificado">No especificado</string>
     <string name="lblMensajeHist">Mensaje.</string>
     <string name="lblEnviadoHist">Enviado a: </string>
