Added ai LLM functionality (#40)
* Added ai LLM functionality

* Showing bottom navbar to Viewers

* Error de merge solucionado.

---------

Co-authored-by: Cristian <84862634+Criser2013@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,7 @@
     <string name="txtGrupoErrNoEncontrado">No existe un grupo con ese nombre.</string>
     <string name="txtSmsEnviados">Los SMS fueron planificados satisfactoriamente.</string>
     <string name="no_especificado">No especificado</string>
+    <string name="el_servicio_est_muy_ocupado_por_favor_intente_m_s_tarde">El servicio está muy ocupado. Por favor, intente más tarde.</string>
     <string name="tituloReportes">Reportes</string>
     <string name="lblMensajeHist">Mensaje.</string>
     <string name="lblEnviadoHist">Enviado a: </string>
