GPUV-1 Apariencia de ventana de editar y crear actualizadas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,30 +2,30 @@
     <string name="app_name">GestRenacer</string>
     <string name="buscar_hint">Buscar a una persona aquí</string>
     <string name="tituloAñadirUsuario">CREAR NUEVO USUARIO</string>
-    <string name="label_nombre">Nombre(s):</string>
+    <string name="label_nombre">Nombre(s)</string>
     <string name="inserte_su_nombre">Inserte su nombre</string>
-    <string name="apellido_s">Apellido(s):</string>
+    <string name="apellido_s">Apellido(s)</string>
     <string name="inserte_su_apellido">Inserte su apellido</string>
     <string name="n_mero_de_identificaci_n">Número de identificación</string>
     <string name="digite_su_n_mero_de_id">Digite su número de ID</string>
-    <string name="tipo_de_documento">Tipo de documento:</string>
-    <string name="n_mero_de_celular">Celular:</string>
+    <string name="tipo_de_documento">Tipo de documento</string>
+    <string name="n_mero_de_celular">Celular</string>
     <string name="digite_su_n_mero_de_celular">Digite su número de celular</string>
     <string name="direcci_n">Dirección:</string>
-    <string name="inserte_su_direcci_n">Inserte su dirección</string>
+    <string name="inserte_su_direcci_n">Dirección</string>
     <string name="eps">EPS:</string>
-    <string name="inserte_su_eps">Inserte su EPS</string>
+    <string name="inserte_su_eps">EPS</string>
     <string name="seleccione_su_tipo_de_documento">Seleccione su tipo de documento</string>
     <string name="datos_personales">Datos Personales</string>
     <string name="nombre_completo">Nombre completo:</string>
-    <string name="digite_el_celular_de_su_contacto">Digite el celular de su contacto</string>
+    <string name="digite_el_celular_de_su_contacto">Celular del contacto</string>
     <string name="parentesco">Parentesco:</string>
     <string name="direccion_emergencia">Dirección</string>
-    <string name="direcci_n_de_su_contacto">Dirección de su contacto</string>
+    <string name="direcci_n_de_su_contacto">Dirección del contacto</string>
     <string name="cargo_en_la_iglesia">Cargo en la iglesia</string>
     <string name="es_lider">¿Es líder?</string>
-    <string name="inserte_el_nombre_del_contacto">Inserte el nombre del contacto</string>
-    <string name="parentesco_con_su_contacto">Parentesco con su contacto</string>
+    <string name="inserte_el_nombre_del_contacto">Nombre del contacto</string>
+    <string name="parentesco_con_su_contacto">Parentesco</string>
     <string name="contacto_de_emergencia">Contacto de emergencia</string>
     <string name="boton_para_retroceder">Botón para ir a la ventana anterior</string>
     <string name="permisos_en_la_aplicaci_n">Permisos en la aplicación</string>
@@ -68,9 +68,9 @@
     <string name="selecc_atencion">Cambie el estado de atención</string>
     <string name="ver_usuario">Ver Usuario</string>
     <string name="imagen_de_perfil">Imagen de perfil</string>
-    <string name="cedula">Cédula:</string>
-    <string name="sexo">Sexo:</string>
-    <string name="estado_civil">Estado Civil:</string>
+    <string name="cedula">Cédula</string>
+    <string name="sexo">Sexo</string>
+    <string name="estado_civil">Estado civil</string>
     <string name="fecha_nacimiento">Fecha Nacimiento:</string>
     <string name="fecha_registro">Fecha Registro:</string>
     <string name="nombre">Nombre:</string>
@@ -80,7 +80,7 @@
     <string name="bot_n_para_borrar_usuario">Botón para borrar usuario</string>>
     <string name="seleccione_el_sexo">Seleccione el Sexo</string>
     <string name="seleccione_el_estado_civil">Seleccione el estado civil</string>
-    <string name="selecciones_rol_a_asignar">Seleccione rol a asignar</string>
+    <string name="selecciones_rol_a_asignar">Rol</string>
     <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
     <string name="seleccione_fecha_de_nacimiento">Seleccione fecha de nacimiento</string>
     <string name="otros_datos">Otros datos</string>>
@@ -175,5 +175,4 @@
     <string name="txtPermisoSms">No podrás enviar SMS hasta que concedas el permiso.</string>
     <string name="txtAviso">Aviso.</string>
     <string name="txtEmail">Correo electrónico</string>
-    <string name="txtEditEmail">Digite su correo electrónico</string>
 </resources>
