--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,7 @@
     <string name="txtEmail">Correo electrónico</string>
     <string name="txtErrEmailGoo">Solo se aceptan correos de Gmail.</string>
     <string name="txtCorreo">Correo electrónico:</string>
+    <string name="webClientId">400377355661-vq6g54ps8m76t55o8rs6ai6asjqnvu3b.apps.googleusercontent.com</string>
+    <string name="lblBtnEnviarSms">Enviar mensaje</string>
+    <string name="txtErrorGoogle">No se ha podido iniciar sesión, comprueba tu tus credenciales o conexión y reintenta.</string>
 </resources>
